manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ocean-app
  namespace: ocean
  labels:
    app:  ocean-app
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ocean-app
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  ocean-app
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  ocean-app
        image: netkovjordan/ocean_app:v1.1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
          name:  ocean-app
      restartPolicy: Always
