manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocean-app-service
  namespace: ocean
spec:
  selector:
    app: ocean-app
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
